--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -566,6 +566,20 @@ section {
 	.copyright {
 		font-size: 1.2rem;
 	}
+
+	.creator {
+		margin-top: -4rem;
+		font-size: 1.2rem;
+
+		a {
+			text-decoration: none;
+			color: #000;
+
+			&:hover {
+				color: #201f1f;
+			}
+		}
+	}
 }
 
 @media (min-width: 576px) {
