--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -316,6 +316,8 @@ section {
 	}
 
 	.slider img {
+		width: 100%;
+		height: 100%;
 		flex: 1 0 100%;
 		scroll-snap-align: start;
 		object-fit: cover;
