--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -66,21 +66,21 @@ section {
 		background-color: #ff4d4dc5;
 		border-radius: 25px;
 		z-index: 500;
+	}
 
-		&--item {
-			padding: 1rem;
-			border-radius: 50%;
-			transition: transform 0.5s ease;
+	&__nav-item {
+		padding: 1rem;
+		border-radius: 50%;
+		transition: transform 0.5s ease;
 
-			&:hover {
-				transform: scale(0.9);
-			}
+		&:hover {
+			transform: scale(0.9);
 		}
+	}
 
-		&--item.active {
-			background-color: #fc5656;
-			transition: 0.5s ease;
-		}
+	&__nav-item.active {
+		background-color: #fc5656;
+		transition: 0.5s ease;
 	}
 
 	&__logo {
